added Udemy, nodejs + cosmetic changes

--- a/crowdsourcing.html
+++ b/crowdsourcing.html
@@ -2,7 +2,7 @@
 <html style="height: 100%;">
 <head>
 	<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
-	<title>Crowdsourcing Services</title>
+	<title>Blockchain Services</title>
 	<link href="css/rfv.css" rel="stylesheet" type="text/css">
 	<script type="text/JavaScript">
 		var backgrounds = ["b3e840bcd93913dcb64864b3b901ee8a.jpg", "back2.png", "Background2.jpg", "background-image-checkers-chequered-checkered-squares-seamless-tileable-ship-grey-bokara-grey-2364aq.png", "back_main.jpg", "BGAlien.jpg", "BGDark.jpg", "BGLiquidMetal.jpg", "blackopal.gif", "britswrgold.jpg", "hex_grid_wallpaper_01__no_mask_by_adoomer-d3qx0iv.png", "p16of4lqkpovl1o2l1ecbbh814s9-details.jpg", "pattern06.png", "Red Background.png", "txwld004.jpg", "txwld008.jpg", "txwld034.jpg", "txwld045.jpg", "txwld061.jpg", "txwld064.jpg", "txwld100.jpg", "txwld101.jpg", "txwld102.jpg", "txwld116.jpg", "txwld117.jpg", "txwld122.jpg", "txwld125.jpg", "WaterColor.jpg"];
@@ -31,13 +31,14 @@
 			border="0"
 			cellspacing="0"
 			width="70%">
-				<tr valign="bottom" height="79" class="sign">
+				<tr valign="center" height="79" class="sign">
 					<td align="left" style="padding-left: 7px;">
 						<a href="http://www.rfv.io"><img id="RFV_logo" src="" height="64" style="border: none;" /></a>
+						<h_1><font color="white">BLOCKCHAIN SERVICES</font></h_1>
 					</td>
+				</tr>
 				<tr valign="top">
 					<td align="left" style="padding-left: 32px; padding-right: 32px">
-						<h_1>FINTECH CROWDSOURCING</h_1>
 						<rn_d>
 							<p>
 							I have recently been intimately involved with the fund-raising initiatives of <a href="https://www.augur.net"><img src="images/logos/augur.png" style="border: none;" width="100" /></a></p>
