--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 					<p>
 					Allow me to show you how I can help you.</p>
 					<p>
-					 <a class="button" href="programming.html">Software Development</a><a class="button" href="http://www.wealthtrainer.co">Financial Advice</a><a class="button" href="http://www.icofund.org">ICOFund</a><a class="button" href="crowdsourcing.html">Crowdsourcing</a></p></td>
+					 <a class="button" href="http://www.icofund.org">ICOFund</a><a class="button" href="programming.html">Software Development</a><a class="button" href="http://www.wealthtrainer.co">Financial Advice</a><a class="button" href="crowdsourcing.html">Crowdsourcing</a></p></td>
 				</tr>
 				<tr valign="top" style="height:37px;">
 					<td><h_2>PROFILES</h_2></td>
@@ -90,16 +90,15 @@
 						<a href="http://www.guru.com/freelancers/ryan-f-venter" target="_blank">Guru</a><br>
 						<a href="https://github.com/RFVenter" target="_blank">Github</a><br>
 						<a href="http://stackoverflow.com/users/6494274/rfventer?tab=profile" target="_blank">Stack Overflow</a><br>
-						<a href="https://trello.com/rfventer">Trello</a><br>
+						<a href="https://www.udemy.com/user/riaan-francois-venter/">Udemy</a><br>
 						<a href="https://notbot.me/Selma61gQF4rhTk" target="_blank">NotBot</a><br>
 						<a href="https://twitter.com/RFVenter" target="_blank">Twitter</a><br>
 						<a href="http://www.fb.me/riaanfv" target="_blank">Facebook</a><br>
-						
 					</td>
 				</tr>
 				<tr valign="top" style="height:37px;">
 					<td><h_2>TIME ZONE</h_2></td>
-					<td><rn_l>Perth UTC + 8</rn_l></td>
+					<td><rn_l>UTC + 8</rn_l></td>
 				</tr>
 				<tr valign="top" style="height:37px;">
 					<td><h_2>LOCATION</h_2></td>
