--- a/programming.html
+++ b/programming.html
@@ -31,14 +31,15 @@
 			border="0"
 			cellspacing="0"
 			width="70%">
-				<tr valign="bottom" height="79" class="sign">
+				<tr valign="center" height="79" class="sign">
 					<td align="left" style="padding-left: 7px;">
 						<a href="http://www.rfv.io"><img id="RFV_logo" src="" height="64" style="border: none;" /></a>
+						<h_1><font color="white">PROGRAMMING</font></h_1>
 					</td>
 				</tr>
 				<tr valign="top">
 					<td align="left" style="padding-left: 32px; padding-right: 32px">
-						<h_1>PROGRAMMING</h_1>
+						
 						<rn_d>
 						<p>
 						Every project that I work on, every challenge that I face, I overcome. I am able to learn whatever technology stack is required to fix problems, and I am looking forward to learning even more.</p>
@@ -53,31 +54,33 @@
 						<h_2>KEY TECHNOLOGIES</h_2>
 						<p>
 						<b_r>python 3.5/2.7, cython, cv2, pil, openpyxl, wxpython, tkinter, numpy, scipy, pandas, matplotlib, ipython, sql, sqlalchemy, mysql, postgresql, sqlite, json, json-rpc, xml, excel, csv, regular expression, pdftotext, git, github, heroko, amazon, fintech, bitcoin, ethereum, solidity, linux, windows, macos
-						<img src="images/logos/python.png" style="border: none;" width="151">
-						<img src="images/logos/numpy.png" style="border: none;" width="151">
-						<img src="images/logos/scipy.png" style="border: none;" width="151">
-						<img src="images/logos/pandas.png" style="border: none;" width="199">
-						<img src="images/logos/matplotlib.png" style="border: none;" width="151">
-						<img src="images/logos/beautifulsoup.png" style="border: none;" width="151">
-						<img src="images/logos/ipython.png" style="border: none;" width="131">
-						<img src="images/logos/sqlalchemy.png" style="border: none;" width="151">
-						<img src="images/logos/mysql.png" style="border: none;" width="151">
-						<img src="images/logos/postgresql.png" style="border: none;" width="151">
-						<img src="images/logos/sqlite.png" style="border: none;" width="151">
-						<img src="images/logos/json.png" style="border: none;" width="151">
-						<img src="images/logos/xml.png" style="border: none;" width="151">
-						<img src="images/logos/excel.png" style="border: none;" width="151">
-						<img src="images/logos/csv.png" style="border: none;" width="127">
-						<img src="images/logos/regex.png" style="border: none;" width="127">
-						<img src="images/logos/github.png" style="border: none;" width="151">
-						<img src="images/logos/heroku.png" style="border: none;" width="151">
-						<img src="images/logos/bitcoin.png" style="border: none;" width="151">
-						<img src="images/logos/ethereum.png" style="border: none;" width="151">
-						<img src="images/logos/solidity.png" style="border: none;" width="151">
-						<img src="images/logos/truffle.png" style="border: none;" width="151">
-						<img src="images/logos/linux.png" style="border: none;" width="151">
-						<img src="images/logos/windows.png" style="border: none;" width="151">
-						<img src="images/logos/macos.png" style="border: none;" width="127">
+						<img src="images/logos/python.png" style="border: none; margin: 8px" width="151">
+						<img src="images/logos/numpy.png" style="border: none; margin: 8px" width="151">
+						<img src="images/logos/scipy.png" style="border: none; margin: 8px" width="151">
+						<img src="images/logos/pandas.png" style="border: none; margin: 8px" width="199">
+						<img src="images/logos/matplotlib.png" style="border: none; margin: 8px" width="151">
+						<img src="images/logos/beautifulsoup.png" style="border: none; margin: 8px" width="151">
+						<img src="images/logos/ipython.png" style="border: none; margin: 8px" width="131">
+						<img src="images/logos/sqlalchemy.png" style="border: none; margin: 8px" width="151">
+						<img src="images/logos/npm.svg" style="border: none; margin: 8px" width="151">
+						<img src="images/logos/nodejs.svg" style="border: none; margin: 8px" width="199">
+						<img src="images/logos/mysql.png" style="border: none; margin: 8px" width="151">
+						<img src="images/logos/postgresql.png" style="border: none; margin: 8px" width="151">
+						<img src="images/logos/sqlite.png" style="border: none; margin: 8px" width="151">
+						<img src="images/logos/json.png" style="border: none; margin: 8px" width="151">
+						<img src="images/logos/xml.png" style="border: none; margin: 8px" width="151">
+						<img src="images/logos/excel.png" style="border: none; margin: 8px" width="151">
+						<img src="images/logos/csv.png" style="border: none; margin: 8px" width="127">
+						<img src="images/logos/regex.png" style="border: none; margin: 8px" width="127">
+						<img src="images/logos/github.png" style="border: none; margin: 8px" width="151">
+						<img src="images/logos/heroku.png" style="border: none; margin: 8px" width="151">
+						<img src="images/logos/bitcoin.png" style="border: none; margin: 8px" width="151">
+						<img src="images/logos/ethereum.png" style="border: none; margin: 8px" width="151">
+						<img src="images/logos/solidity.png" style="border: none; margin: 8px" width="151">
+						<img src="images/logos/truffle.png" style="border: none; margin: 8px" width="151">
+						<img src="images/logos/linux.png" style="border: none; margin: 8px" width="151">
+						<img src="images/logos/windows.png" style="border: none; margin: 8px" width="151">
+						<img src="images/logos/macos.png" style="border: none; margin: 8px" width="127">
 						</b_r></p>
 						<h_2>BEST PRACTICES</h_2>
 						<rn_d><ul>
