simplified the button class and added button on white background

--- a/programming.html
+++ b/programming.html
@@ -39,7 +39,6 @@
 				</tr>
 				<tr valign="top">
 					<td align="left" style="padding-left: 32px; padding-right: 32px">
-						
 						<rn_d>
 						<p>
 						Every project that I work on, every challenge that I face, I overcome. I am able to learn whatever technology stack is required to fix problems, and I am looking forward to learning even more.</p>
@@ -50,7 +49,7 @@
 						<p>
 						I have both practical (technical) and theory (insight). I have a substantial knowledge of computation theory, computation complexity and the history and evolution of computers as we know it, and where the computing industry is heading into the future.</p></rn_d>
 						<p>
-						<a href="https://drive.google.com/open?id=0BzkLEtCwUeaASElXNE5fXzFUZDA">Resume | CV</a></p>
+						<a class="button button-black" href="https://drive.google.com/open?id=0BzkLEtCwUeaASElXNE5fXzFUZDA">Resume</a></p>
 						<h_2>KEY TECHNOLOGIES</h_2>
 						<p>
 						<b_r>python 3.5/2.7, cython, cv2, pil, openpyxl, wxpython, tkinter, numpy, scipy, pandas, matplotlib, ipython, sql, sqlalchemy, mysql, postgresql, sqlite, json, json-rpc, xml, excel, csv, regular expression, pdftotext, git, github, heroko, amazon, fintech, bitcoin, ethereum, solidity, linux, windows, macos
