--- a/programming.html
+++ b/programming.html
@@ -62,6 +62,7 @@
 						<img src="images/logos/sqlalchemy.png" style="border: none; margin: 8px" width="151">
 						<img src="images/logos/npm.svg" style="border: none; margin: 8px" width="151">
 						<img src="images/logos/nodejs.svg" style="border: none; margin: 8px" width="199">
+						<img src="images/logos/bootstrap.jpg" style="border: none; margin: 8px" width="199">
 						<img src="images/logos/mysql.png" style="border: none; margin: 8px" width="151">
 						<img src="images/logos/postgresql.png" style="border: none; margin: 8px" width="151">
 						<img src="images/logos/sqlite.png" style="border: none; margin: 8px" width="151">
