--- a/crowdsourcing.html
+++ b/crowdsourcing.html
@@ -33,7 +33,7 @@
 			width="70%">
 				<tr valign="center" height="79" class="sign">
 					<td align="left" style="padding-left: 7px;">
-						<a href="http://www.rfv.io"><img id="RFV_logo" src="" height="64" style="border: none;" /></a>
+						<a href="http://www.rfv.io"><img id="RFV_logo" src="" height="64" style="border: none;" /></a><br>
 						<h_1><font color="white">BLOCKCHAIN SERVICES</font></h_1>
 					</td>
 				</tr>
