--- a/programming.html
+++ b/programming.html
@@ -59,6 +59,7 @@
 						<img src="images/logos/matplotlib.png" style="border: none; margin: 8px" width="151">
 						<img src="images/logos/beautifulsoup.png" style="border: none; margin: 8px" width="151">
 						<img src="images/logos/ipython.png" style="border: none; margin: 8px" width="131">
+						<img src="images/logos/pycharm.png" style="border: none; margin: 8px" width="151">
 						<img src="images/logos/sqlalchemy.png" style="border: none; margin: 8px" width="151">
 						<img src="images/logos/npm.svg" style="border: none; margin: 8px" width="151">
 						<img src="images/logos/nodejs.svg" style="border: none; margin: 8px" width="199">
