--- a/programming.html
+++ b/programming.html
@@ -1,8 +1,15 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html style="height: 100%;">
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-	<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
-	<title>About me</title>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="This page is all about how Ryan can help you with your programming needs">
+	<meta name="author" content="Ryan F Venter">
+
+	<title>Programming and Development</title>
+
 	<link href="css/rfv.css" rel="stylesheet" type="text/css">
 	<script type="text/JavaScript">
 		var backgrounds = ["b3e840bcd93913dcb64864b3b901ee8a.jpg", "back2.png", "Background2.jpg", "background-image-checkers-chequered-checkered-squares-seamless-tileable-ship-grey-bokara-grey-2364aq.png", "back_main.jpg", "BGAlien.jpg", "BGDark.jpg", "BGLiquidMetal.jpg", "blackopal.gif", "britswrgold.jpg", "hex_grid_wallpaper_01__no_mask_by_adoomer-d3qx0iv.png", "p16of4lqkpovl1o2l1ecbbh814s9-details.jpg", "pattern06.png", "Red Background.png", "txwld004.jpg", "txwld008.jpg", "txwld034.jpg", "txwld045.jpg", "txwld061.jpg", "txwld064.jpg", "txwld100.jpg", "txwld101.jpg", "txwld102.jpg", "txwld116.jpg", "txwld117.jpg", "txwld122.jpg", "txwld125.jpg", "WaterColor.jpg"];
@@ -34,11 +41,11 @@
 				<tr valign="center" height="79" class="sign">
 					<td align="left" style="padding-left: 7px;">
 						<a href="http://www.rfv.io"><img id="RFV_logo" src="" height="64" style="border: none;" /></a><br>
-						<h_1><font color="white">PROGRAMMING</font></h_1>
 					</td>
 				</tr>
 				<tr valign="top">
 					<td align="left" style="padding-left: 32px; padding-right: 32px">
+						<h_1>PROGRAMMING</h_1>
 						<rn_d>
 						<p>
 						Every project that I work on, every challenge that I face, I overcome. I am able to learn whatever technology stack is required to fix problems, and I am looking forward to learning even more.</p>
@@ -74,13 +81,12 @@
 						<img src="images/logos/regex.png" style="border: none; margin: 8px" width="127">
 						<img src="images/logos/github.png" style="border: none; margin: 8px" width="151">
 						<img src="images/logos/heroku.png" style="border: none; margin: 8px" width="151">
-						<img src="images/logos/bitcoin.png" style="border: none; margin: 8px" width="151">
+						<img src="images/logos/vagrant.png" style="border: none; margin: 8px" width="151">
 						<img src="images/logos/ethereum.png" style="border: none; margin: 8px" width="151">
 						<img src="images/logos/solidity.png" style="border: none; margin: 8px" width="151">
 						<img src="images/logos/truffle.png" style="border: none; margin: 8px" width="151">
 						<img src="images/logos/linux.png" style="border: none; margin: 8px" width="151">
 						<img src="images/logos/windows.png" style="border: none; margin: 8px" width="151">
-						<img src="images/logos/macos.png" style="border: none; margin: 8px" width="127">
 						</p>
 						<h_2>BEST PRACTICES</h_2>
 						<rn_d><ul>
