--- a/crowdsourcing.html
+++ b/crowdsourcing.html
@@ -1,8 +1,15 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html style="height: 100%;">
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-	<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="This page is all about how Ryan can help you with blockchain services">
+	<meta name="author" content="Ryan F Venter">
+
 	<title>Blockchain Services</title>
+	
 	<link href="css/rfv.css" rel="stylesheet" type="text/css">
 	<script type="text/JavaScript">
 		var backgrounds = ["b3e840bcd93913dcb64864b3b901ee8a.jpg", "back2.png", "Background2.jpg", "background-image-checkers-chequered-checkered-squares-seamless-tileable-ship-grey-bokara-grey-2364aq.png", "back_main.jpg", "BGAlien.jpg", "BGDark.jpg", "BGLiquidMetal.jpg", "blackopal.gif", "britswrgold.jpg", "hex_grid_wallpaper_01__no_mask_by_adoomer-d3qx0iv.png", "p16of4lqkpovl1o2l1ecbbh814s9-details.jpg", "pattern06.png", "Red Background.png", "txwld004.jpg", "txwld008.jpg", "txwld034.jpg", "txwld045.jpg", "txwld061.jpg", "txwld064.jpg", "txwld100.jpg", "txwld101.jpg", "txwld102.jpg", "txwld116.jpg", "txwld117.jpg", "txwld122.jpg", "txwld125.jpg", "WaterColor.jpg"];
@@ -34,21 +41,21 @@
 				<tr valign="center" height="79" class="sign">
 					<td align="left" style="padding-left: 7px;">
 						<a href="http://www.rfv.io"><img id="RFV_logo" src="" height="64" style="border: none;" /></a><br>
-						<h_1><font color="white">BLOCKCHAIN SERVICES</font></h_1>
 					</td>
 				</tr>
 				<tr valign="top">
 					<td align="left" style="padding-left: 32px; padding-right: 32px">
+						<h_1>BLOCKCHAIN SERVICES</h_1>
 						<rn_d>
 							<p>
-							I have recently been intimately involved with the fund-raising initiatives of <a href="https://www.augur.net"><img src="images/logos/augur.png" style="border: none;" width="100" /></a></p>
+							I have been intimately involved with the fund-raising initiatives of <a href="https://www.augur.net"><img src="images/logos/augur.png" style="border: none;" width="100" /></a></p>
 							<p>
 							We reached substantial investments and raised over $5.2 million, which will enable them to achieve their objectives and to become good investments for their respective investors.</p>
 							<p>
 							Then I joined the team from <a href="https://www.golem.network"><img src="images/logos/golem.png" style="border: none;" width="100" /></a></p>
 							<p>We quickly reached our target within the 1st week and we all know the rest of the story. Golem is now on the way to producing truly amazing decentralized tech, and investors can expect good returns.</p>
 							Because I am an active blogger in the Ethereum world, I have been able to provide a valuable service to these organizations. I was active in promoting the sale of tokens and dealing with any objections and doubters. As a Financial Advisor for the past 9 years I fully understand the landscape of these ventures. I also learned a lot from their founders and have build valuable connection in the process.</p>
-							<b_d>Services</b_d>
+							<h_2>SERVICES</h_2>
 							<p>
 								<ul>
 									<li>Facebook sharing and group page creation and sharing</li>
