--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html style="height: 100%;">
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-	<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="This page is all about how Ryan can help you">
+	<meta name="author" content="Ryan F Venter">
+
 	<title>Ryan Francois Venter</title>
+
 	<link href="css/rfv.css" rel="stylesheet" type="text/css">
 	<script type="text/JavaScript">
 		var backgrounds = ["b1.png", "b2.png", "b3.jpg", "b4.jpg", "b5.jpg", "b6.jpg", "b7.jpg", "b8.jpg"];
@@ -14,10 +21,6 @@
 			var logo_image = document.getElementById('RFV_logo');
 			logo_image.src = 'images/RFV_' + logo_name + '.png';
 			
-			refresh()
-		}
-
-		function refresh() {
 			var background_name = backgrounds[Math.floor(Math.random() * backgrounds.length)];
 			var body_background = document.getElementById('body_background');
 			body_background.background = 'images/backgrounds/' + background_name;
@@ -94,6 +97,20 @@
 						<a href="https://notbot.me/Selma61gQF4rhTk" target="_blank">NotBot</a><br>
 						<a href="https://twitter.com/RFVenter" target="_blank">Twitter</a><br>
 						<a href="http://www.fb.me/riaanfv" target="_blank">Facebook</a><br>
+					</td>
+				</tr>
+				<tr valign="top" style="height:37px;">
+					<td><h_2>EDUCATION</h_2></td>
+					<td>
+						<rn_l>
+						<b_l>Bachelor's Degree (Economics)</b_l>| University of Cape Town<br>
+						<b_l>Investment Advice Diploma</b_l>| Chartered Institute of Securities and Investments (London)<br>
+						<b_l>Award in Financial Planning</b_l>| CII (London)<br>
+						<b_l>Award in General Insurance</b_l>| CII (London)<br>
+						<b_l>QFC Rules and Regulations</b_l>| Chartered Institute of Securities and Investments (London)<br>
+						<b_l>Comptia A+</b_l>| InfoTech College (London)<br>
+						Udemy Courses| Javascript - From Beginner to Pro!, Assembly Language Adventures, Learn Socket Programming in C from Scratch, A Beginners Guide to Django!, Learn to Build Websites using Twitter Bootstrap, Complete JQuery And JQuery UI Course, Introduction to Web Technologies.<br>
+						</rn_l>
 					</td>
 				</tr>
 				<tr valign="top" style="height:37px;">
