--- a/programming.html
+++ b/programming.html
@@ -59,18 +59,24 @@
 						<a class="button button-black" href="https://drive.google.com/open?id=0BzkLEtCwUeaASElXNE5fXzFUZDA">Resume</a></p>
 						<h_2>KEY TECHNOLOGIES</h_2>
 						<p>
-						<img src="images/logos/python.png" style="border: none; margin: 8px" width="151">
+						<img src="images/logos/python.png" style="border: none; margin: 8px" width="199">
 						<img src="images/logos/numpy.png" style="border: none; margin: 8px" width="151">
 						<img src="images/logos/scipy.png" style="border: none; margin: 8px" width="151">
 						<img src="images/logos/pandas.png" style="border: none; margin: 8px" width="199">
 						<img src="images/logos/matplotlib.png" style="border: none; margin: 8px" width="151">
+						<img src="images/logos/sqlalchemy.png" style="border: none; margin: 8px" width="151">
 						<img src="images/logos/beautifulsoup.png" style="border: none; margin: 8px" width="151">
+						<hr>
 						<img src="images/logos/ipython.png" style="border: none; margin: 8px" width="131">
 						<img src="images/logos/pycharm.png" style="border: none; margin: 8px" width="151">
-						<img src="images/logos/sqlalchemy.png" style="border: none; margin: 8px" width="151">
-						<img src="images/logos/npm.svg" style="border: none; margin: 8px" width="151">
+						<img src="images/logos/sublime-text.png" style="border: none; margin: 8px" width="199">
+						<hr>
 						<img src="images/logos/nodejs.svg" style="border: none; margin: 8px" width="199">
+						<img src="images/logos/npm.svg" style="border: none; margin: 8px" width="151">
 						<img src="images/logos/bootstrap.jpg" style="border: none; margin: 8px" width="199">
+						<hr>
+						<img src="images/logos/regex.png" style="border: none; margin: 8px" width="131">
+						<hr>
 						<img src="images/logos/mysql.png" style="border: none; margin: 8px" width="151">
 						<img src="images/logos/postgresql.png" style="border: none; margin: 8px" width="151">
 						<img src="images/logos/sqlite.png" style="border: none; margin: 8px" width="151">
@@ -78,15 +84,18 @@
 						<img src="images/logos/xml.png" style="border: none; margin: 8px" width="151">
 						<img src="images/logos/excel.png" style="border: none; margin: 8px" width="151">
 						<img src="images/logos/csv.png" style="border: none; margin: 8px" width="127">
-						<img src="images/logos/regex.png" style="border: none; margin: 8px" width="127">
+						<hr>
 						<img src="images/logos/github.png" style="border: none; margin: 8px" width="151">
 						<img src="images/logos/heroku.png" style="border: none; margin: 8px" width="151">
 						<img src="images/logos/vagrant.png" style="border: none; margin: 8px" width="151">
+						<hr>
 						<img src="images/logos/ethereum.png" style="border: none; margin: 8px" width="151">
 						<img src="images/logos/solidity.png" style="border: none; margin: 8px" width="151">
 						<img src="images/logos/truffle.png" style="border: none; margin: 8px" width="151">
+						<hr>
 						<img src="images/logos/linux.png" style="border: none; margin: 8px" width="151">
 						<img src="images/logos/windows.png" style="border: none; margin: 8px" width="151">
+						<hr>
 						</p>
 						<h_2>BEST PRACTICES</h_2>
 						<rn_d><ul>
