--- a/programming.html
+++ b/programming.html
@@ -39,7 +39,7 @@
 			cellspacing="0"
 			width="70%">
 				<tr valign="center" height="79" class="sign">
-					<td align="left" style="padding-left: 7px;">
+					<td align="left" style="padding-left: 32px; padding-right: 32px">
 						<a href="http://www.rfv.io"><img id="RFV_logo" src="" height="64" style="border: none;" /></a><br>
 					</td>
 				</tr>
