--- a/programming.html
+++ b/programming.html
@@ -74,6 +74,7 @@
 						<img src="images/logos/nodejs.svg" style="border: none; margin: 8px" width="199">
 						<img src="images/logos/npm.svg" style="border: none; margin: 8px" width="151">
 						<img src="images/logos/bootstrap.jpg" style="border: none; margin: 8px" width="199">
+						<img src="images/logos/jquery.png" style="border: none; margin: 8px" width="151">
 						<hr>
 						<img src="images/logos/regex.png" style="border: none; margin: 8px" width="131">
 						<hr>
