solidity logos/solidity.jpg

--- a/programming.html
+++ b/programming.html
@@ -91,7 +91,7 @@
 						<img src="images/logos/vagrant.png" style="border: none; margin: 8px" width="151">
 						<hr>
 						<img src="images/logos/ethereum.png" style="border: none; margin: 8px" width="151">
-						<img src="images/logos/solidity.png" style="border: none; margin: 8px" width="151">
+						<img src="images/logos/solidity.jpg" style="border: none; margin: 8px" width="151">
 						<img src="images/logos/truffle.png" style="border: none; margin: 8px" width="151">
 						<hr>
 						<img src="images/logos/linux.png" style="border: none; margin: 8px" width="151">
