--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 					<p>
 					Allow me to show you how I can help you.</p>
 					<p>
-					 <a class="button" href="http://www.icofund.org">ICOFund</a><a class="button" href="programming.html">Software Development</a><a class="button" href="http://www.wealthtrainer.co">Financial Advice</a><a class="button" href="crowdsourcing.html">Crowdsourcing</a></p></td>
+					 <a class="button" href="programming.html">Software Development</a><a class="button" href="http://www.icofund.org">ICOFund</a><a class="button" href="crowdsourcing.html">Crowdsourcing</a><a class="button" href="http://www.wealthtrainer.co">Financial Advice</a></p></td>
 				</tr>
 				<tr valign="top" style="height:37px;">
 					<td><h_2>PROFILES</h_2></td>
