--- a/programming.html
+++ b/programming.html
@@ -86,6 +86,7 @@
 						<img src="images/logos/excel.png" style="border: none; margin: 8px" width="151">
 						<img src="images/logos/csv.png" style="border: none; margin: 8px" width="127">
 						<hr>
+						<img src="images/logos/git.png" style="border: none; margin: 8px" width="127">
 						<img src="images/logos/github.png" style="border: none; margin: 8px" width="151">
 						<img src="images/logos/heroku.png" style="border: none; margin: 8px" width="151">
 						<img src="images/logos/vagrant.png" style="border: none; margin: 8px" width="151">
