--- a/programming.html
+++ b/programming.html
@@ -86,17 +86,26 @@
 						<img src="images/logos/excel.png" style="border: none; margin: 8px" width="151">
 						<img src="images/logos/csv.png" style="border: none; margin: 8px" width="127">
 						<hr>
+						<img src="images/logos/ethereum.png" style="border: none; margin: 8px" width="151">
+						<img src="images/logos/solidity.jpg" style="border: none; margin: 8px" width="151">
+						<img src="images/logos/truffle.png" style="border: none; margin: 8px" width="151">
+						<hr>
 						<img src="images/logos/git.png" style="border: none; margin: 8px" width="127">
 						<img src="images/logos/github.png" style="border: none; margin: 8px" width="151">
 						<img src="images/logos/heroku.png" style="border: none; margin: 8px" width="151">
 						<img src="images/logos/vagrant.png" style="border: none; margin: 8px" width="151">
 						<hr>
-						<img src="images/logos/ethereum.png" style="border: none; margin: 8px" width="151">
-						<img src="images/logos/solidity.jpg" style="border: none; margin: 8px" width="151">
-						<img src="images/logos/truffle.png" style="border: none; margin: 8px" width="151">
+						<img src="images/logos/slack.png" style="border: none; margin: 8px" width="151">
+						<img src="images/logos/skype.png" style="border: none; margin: 8px" width="151">
+						<img src="images/logos/trello.png" style="border: none; margin: 8px" width="151">
+						<img src="images/logos/asana.png" style="border: none; margin: 8px" width="151">
+						<hr>
+						<img src="images/logos/upwork.png" style="border: none; margin: 8px" width="151">
+						<img src="images/logos/guru.png" style="border: none; margin: 8px" width="127">
 						<hr>
 						<img src="images/logos/linux.png" style="border: none; margin: 8px" width="151">
 						<img src="images/logos/windows.png" style="border: none; margin: 8px" width="151">
+						<img src="images/logos/macos.png" style="border: none; margin: 8px" width="127">
 						<hr>
 						</p>
 						<h_2>BEST PRACTICES</h_2>
