--- a/index.html
+++ b/index.html
@@ -88,13 +88,11 @@
 					<td><h_2>PROFILES</h_2></td>
 					<td>
 						<a href="http://www.linkedin.com/in/riaanfrancoisventer" target="_blank">LinkedIn</a><br>
-						<a href="https://talent.hubstaff.com/profiles/ryan-f-venter" target="_blank">Hubstaff</a><br>
 						<a href="https://www.upwork.com/fl/riaanventer" target="_blank">Upwork</a><br>
 						<a href="http://www.guru.com/freelancers/ryan-f-venter" target="_blank">Guru</a><br>
 						<a href="https://github.com/RFVenter" target="_blank">Github</a><br>
 						<a href="http://stackoverflow.com/users/6494274/rfventer?tab=profile" target="_blank">Stack Overflow</a><br>
 						<a href="https://www.udemy.com/user/riaan-francois-venter/">Udemy</a><br>
-						<a href="https://notbot.me/Selma61gQF4rhTk" target="_blank">NotBot</a><br>
 						<a href="https://twitter.com/RFVenter" target="_blank">Twitter</a><br>
 						<a href="http://www.fb.me/riaanfv" target="_blank">Facebook</a><br>
 					</td>
@@ -111,6 +109,7 @@
 						<b_l>Comptia A+</b_l>| InfoTech College (London)<br>
 						<b_l>Udemy</b_l>| Javascript - From Beginner to Pro!, Assembly Language Adventures, Learn Socket Programming in C from Scratch, A Beginners Guide to Django!, Learn to Build Websites using Twitter Bootstrap, Complete JQuery And JQuery UI Course, Introduction to Web Technologies<br>
 						<b_l>Code School</b_l>| Git Real<br>
+						<a class="button" href="files/certificates.zip">Certificates</a>
 						</rn_l>
 					</td>
 				</tr>
