--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
 						<b_l>Award in Financial Planning</b_l>| CII (London)<br>
 						<b_l>Award in General Insurance</b_l>| CII (London)<br>
 						<b_l>QFC Rules and Regulations</b_l>| Chartered Institute of Securities and Investments (London)<br>
+						<b_l>Duke University</b_l>| Programming Foundations with JavaScript, HTML and CSS<br>
 						<b_l>Comptia A+</b_l>| InfoTech College (London)<br>
 						<b_l>Udemy</b_l>| Javascript - From Beginner to Pro!, Assembly Language Adventures, Learn Socket Programming in C from Scratch, A Beginners Guide to Django!, Learn to Build Websites using Twitter Bootstrap, Complete JQuery And JQuery UI Course, Introduction to Web Technologies<br>
 						<b_l>Code School</b_l>| Git Real<br>
