--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 					<td><h_2>EDUCATION</h_2></td>
 					<td>
 						<rn_l>
-						<b_l>Bachelor's Degree (Economics)</b_l>| University of Cape Town<br>
+						<b_l>Bachelor's Degree (Economics)</b_l>| University of London<br>
 						<b_l>Investment Advice Diploma</b_l>| Chartered Institute of Securities and Investments (London)<br>
 						<b_l>Award in Financial Planning</b_l>| CII (London)<br>
 						<b_l>Award in General Insurance</b_l>| CII (London)<br>
