added favicon.png site icon

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<meta name="description" content="This page is all about how Ryan can help you">
 	<meta name="author" content="Ryan F Venter">
 
+	<link rel="icon" href="favicon.png">
+
 	<title>Ryan Francois Venter</title>
 
 	<link href="css/rfv.css" rel="stylesheet" type="text/css">
