--- a/index.html
+++ b/index.html
@@ -70,12 +70,11 @@
 					<p>
 					I am a Software Developer focusing on: numerical computation, data extraction, database implementation, data analysis. I have several certificates in Python, have developed several smart contracts with Solidity, and I am  studying Clojure.</p>
 					<p>
-					I am a fee based Financial Advisor with a strong background in portfolio design and international investment. I hold a Level 4 Diploma in Investment Advice from the Chartered Institute of Securities and Investments - London, United Kingdom, and several other certificates in finance.</p>
+					I am a fee based Financial Advisor with a strong background in international investment. I hold a Level 4 Diploma in Investment Advice from the Chartered Institute of Securities and Investments - London, United Kingdom, and several other certificates in finance. I only offer this service to private investors and friends.</p>
 					<p>
 					By combining these two fields I am actively involved in the FinTech industry focusing on cryptocurrency investment initiatives as well as the decentralized smart contract revolution. I am a cryptocurrency blogger, managing the ICOFund, creating smart contracts, as well as part of a consortium exploring business opportunities in this space.</p>
-
 					<p>
-					You may notice from my website, I don't use templates. Everything that I do is uniquely crafted and tailored specifically for each client and each task.<br>
+					You may notice that I don't use templates and that is because everything I do is uniquely crafted and tailored specifically for each client and each task.<br>
 					My problem solving skills are out-of-the-box, and my life motto is to <b_b>add value in whatever I do.</b_b></p>
 					<p>
 					Apart from work: I am a family man. I do exercise daily and eat very healthily. I do not drink alcohol or smoke. I do not watch TV or read news on the Internet that has no relevance to me. I am a focused machine.</p>
@@ -84,7 +83,7 @@
 					<p>
 					Allow me to show you how I can help you.</p>
 					<p>
-					 <a class="button" href="programming.html">Software Development</a><a class="button" href="http://www.icofund.org">ICOFund</a><a class="button" href="crowdsourcing.html">Crowdsourcing</a><a class="button" href="http://www.wealthtrainer.co">Financial Advice</a></p></td>
+					 <a class="button" href="programming.html">Software Development</a><a class="button" href="http://www.icofund.org">ICOFund</a><a class="button" href="crowdsourcing.html">Crowdsourcing</a></p></td>
 				</tr>
 				<tr valign="top" style="height:37px;">
 					<td><h_2>PROFILES</h_2></td>
@@ -107,8 +106,10 @@
 						<b_l>Investment Advice Diploma</b_l>| Chartered Institute of Securities and Investments (London)<br>
 						<b_l>Award in Financial Planning</b_l>| CII (London)<br>
 						<b_l>Award in General Insurance</b_l>| CII (London)<br>
-						<b_l>QFC Rules and Regulations</b_l>| Chartered Institute of Securities and Investments (London)<br>
+						<b_l>Qatar Financial Center Regulatory Authority - Rules and Regulations</b_l>| Chartered Institute of Securities and Investments (London)<br>
+						<hr>
 						<b_l>Duke University</b_l>| Programming Foundations with JavaScript, HTML and CSS<br>
+						<b_l>Duke University</b_l>| Java Programming: Solving Problems with Software<br>
 						<b_l>Comptia A+</b_l>| InfoTech College (London)<br>
 						<b_l>Udemy</b_l>| Javascript - From Beginner to Pro!, Assembly Language Adventures, Learn Socket Programming in C from Scratch, A Beginners Guide to Django!, Learn to Build Websites using Twitter Bootstrap, Complete JQuery And JQuery UI Course, Introduction to Web Technologies<br>
 						<b_l>Code School</b_l>| Git Real<br>
