education formatting changes

--- a/index.html
+++ b/index.html
@@ -111,7 +111,13 @@
 						<b_l>Duke University</b_l>| Programming Foundations with JavaScript, HTML and CSS<br>
 						<b_l>Duke University</b_l>| Java Programming: Solving Problems with Software<br>
 						<b_l>Comptia A+</b_l>| InfoTech College (London)<br>
-						<b_l>Udemy</b_l>| Javascript - From Beginner to Pro!, Assembly Language Adventures, Learn Socket Programming in C from Scratch, A Beginners Guide to Django!, Learn to Build Websites using Twitter Bootstrap, Complete JQuery And JQuery UI Course, Introduction to Web Technologies<br>
+						<b_l>Udemy</b_l>| Javascript - From Beginner to Pro!<br>
+						<b_l>Udemy</b_l>| Assembly Language Adventures<br>
+						<b_l>Udemy</b_l>| Learn Socket Programming in C from Scratch<br>
+						<b_l>Udemy</b_l>| A Beginners Guide to Django!<br>
+						<b_l>Udemy</b_l>| Learn to Build Websites using Twitter Bootstrap<br>
+						<b_l>Udemy</b_l>| Complete JQuery And JQuery UI Course<br>
+						<b_l>Udemy</b_l>| Introduction to Web Technologies<br>
 						<b_l>Code School</b_l>| Git Real<br>
 						<b_l>Destin Learning</b_l>| Introduction to Cloud Computing and Amazon AWS!<br>
 						<a class="button" href="files/certificates.zip">Certificates</a>
