--- a/index.html
+++ b/index.html
@@ -93,9 +93,11 @@
 						<a href="http://www.guru.com/freelancers/ryan-f-venter" target="_blank">Guru</a><br>
 						<a href="https://github.com/RFVenter" target="_blank">Github</a><br>
 						<a href="http://stackoverflow.com/users/6494274/rfventer?tab=profile" target="_blank">Stack Overflow</a><br>
-						<a href="https://www.udemy.com/user/riaan-francois-venter/">Udemy</a><br>
 						<a href="https://twitter.com/RFVenter" target="_blank">Twitter</a><br>
 						<a href="http://www.fb.me/riaanfv" target="_blank">Facebook</a><br>
+						<a href="https://keybase.io/rfventer" target="_blank">Keybase</a><br>
+						<a href="https://www.udemy.com/user/riaan-francois-venter/">Udemy</a><br>
+
 					</td>
 				</tr>
 				<tr valign="top" style="height:37px;">
