--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
 						<b_l>Duke University</b_l>| Programming Foundations with JavaScript, HTML and CSS<br>
 						<b_l>Duke University</b_l>| Java Programming: Solving Problems with Software<br>
 						<b_l>Comptia A+</b_l>| InfoTech College (London)<br>
+						<b_l>Lynda</b_l>| Learning Clojure<br>
+						<b_l>Lynda</b_l>| Code Clinic: Clojure<br>
 						<b_l>Udemy</b_l>| Javascript - From Beginner to Pro!<br>
 						<b_l>Udemy</b_l>| Assembly Language Adventures<br>
 						<b_l>Udemy</b_l>| Learn Socket Programming in C from Scratch<br>
