removed the blogging crap and changed some info

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 					<p>
 					I am a fee based Financial Advisor with a strong background in international investment. I hold a Level 4 Diploma in Investment Advice from the Chartered Institute of Securities and Investments - London, United Kingdom, and several other certificates in finance. I only offer this service to private investors and friends.</p>
 					<p>
-					By combining these two fields I am actively involved in the FinTech industry focusing on cryptocurrency investment initiatives as well as the decentralized smart contract revolution. I am a cryptocurrency blogger, managing the ICOFund, creating smart contracts, as well as part of a consortium exploring business opportunities in this space.</p>
+					By combining these two fields I am actively involved in the FinTech industry focusing on cryptocurrency investment initiatives as well as the decentralized smart contract revolution. I am a cryptocurrency blogger, creating smart contracts, as well as part of a consortium exploring business opportunities in this space.</p>
 					<p>
 					You may notice that I don't use templates and that is because everything I do is uniquely crafted and tailored specifically for each client and each task.<br>
 					My problem solving skills are out-of-the-box, and my life motto is to <b_b>add value in whatever I do.</b_b></p>
@@ -83,7 +83,7 @@
 					<p>
 					Allow me to show you how I can help you.</p>
 					<p>
-					 <a class="button" href="programming.html">Software Development</a><a class="button" href="http://www.icofund.org">ICOFund</a><a class="button" href="crowdsourcing.html">Crowdsourcing</a></p></td>
+					 <a class="button" href="programming.html">Software Development</a><a class="button" href="crowdsourcing.html">Crowdsourcing</a></p></td>
 				</tr>
 				<tr valign="top" style="height:37px;">
 					<td><h_2>PROFILES</h_2></td>
@@ -134,7 +134,7 @@
 				</tr>
 				<tr valign="top" style="height:37px;">
 					<td><h_2>LOCATION</h_2></td>
-					<td><rn_l>Australasia, depending on my clients</rn_l></td>
+					<td><rn_l>Singapore and Asia (depending on my clients)</rn_l></td>
 				</tr>
 			</table>
 		</div>
