removed skype and updated email address

--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
 				<tr valign="top" style="height:37px;">
 					<td><h_2>CONTACT</h_2></td>
 					<td>
-						<a href="mailto:msg@rfv.io">msg@rfv.io</a><br>
-						<a href="skype:riaan.francois.venter?call">Skype</a>
+						<a href="mailto:email@rfv.io">email@rfv.io</a><br>
 					</td>
 				</tr>
 				<tr valign="top" style="height:37px;">
