--- a/index.html
+++ b/index.html
@@ -135,6 +135,11 @@
 					<td><h_2>LOCATION</h_2></td>
 					<td><rn_l>Singapore and Asia (depending on my clients)</rn_l></td>
 				</tr>
+				<tr valign="top" style="height:37px;">
+					<td><h_2>MUSIC</h_2></td>
+					<td><rn_l>I enjoy creating music. I have been doing so for many years but I had to stop due to obligations. These are the last of my crude and unedited and un-mastered song. These where created over 12 years ago. I am in the process to buy music gear and to start again......<br>
+					<a class="button" href="https://drive.google.com/drive/folders/0Bzyb-zuvnpYvdnNKRWsxdm1zdDg?usp=sharing">My musical creations</a></rn_l></td>
+				</tr>
 			</table>
 		</div>
 	</div>
