--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
     <script type="text/JavaScript">
-    	var logos = ['blue', 'red', 'yellow', 'green', 'grey', 'grey_79', 'grey_101'];
+        var logos = ['blue', 'red', 'yellow', 'green', 'grey'];
+    	var backgrounds = ['2a', '2b', '2c', '2d', '2e', '2f', '2g', '2h', '2i', '1a', '1b'];
 
     	function starter()	{
     		var logo_name = logos[Math.floor(Math.random() * logos.length)];
@@ -78,12 +79,12 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <img src="img/RFV_grey_line.png" width="512px"><br>
+                        <img src="img/RFV_grey_line.png" width="512px"><br><br>
                         <p class="intro-text" style="text-shadow: 2px 2px #666666;">
                             <b>Riaan Francois Venter<br>Professional FinTech Advisor</b><br><br>
-                            8 years of offshore Wealth Management experience<br>
-                            8 years of programming experience<br>
-                            Involved with 5 large ICOs raising over 48M USD<br><br>
+                            &#9632; 8 years of offshore Wealth Management experience<br>
+                            &#9632; 8 years of programming experience<br>
+                            &#9632; Completed 5 large ICOs raising over 48M USD<br><br>
                             <span class="taddress">
                             	<a href="mailto:email@rfv.io">email@rfv.io</a>
                            	</span>
@@ -210,7 +211,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; Riaan Francois Venter 2017</p>
+            <p><font color="yellow">Copyright &copy; Riaan Francois Venter 2017</font></p>
             <p><a href="http://www.rfv.io"><img src="img/RFV_grey_line.png" width="128px" style="border: none;"/></a>
             	<img src="img/Pentagram.gif" style="border: none;"/>
             	
