--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
                     <div class="col-md-8 col-md-offset-2">
                         <p class="intro-text" style="text-shadow: 2px 2px #666666;">
                             <b>Riaan Francois Venter<br>Professional FinTech Advisor</b><br><br>
-                            &#9632; 8 years of offshore wealth management experience<br>
-                            &#9632; 8 years of programming experience<br>
+                            &#9632; 9 years offshore wealth management experience<br>
+                            &#9632; 9 years programming experience<br>
                             &#9632; Completed 5 large ICOs raising over 48M USD<br><br>
                             <span class="taddress">
                             	<a href="mailto:email@rfv.io">email@rfv.io</a>
