--- a/index.html
+++ b/index.html
@@ -220,9 +220,10 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p><font color="yellow">Copyright &copy; Riaan Francois Venter 2017</font></p>
-            <p><a href="http://www.rfv.io"><img src="img/RFV_grey_line.png" width="128px" style="border: none;"/></a>
+            <p><font color="yellow">Copyright &copy; </font>
+                <a href="http://www.rfv.io"><img src="img/g00.png" width="60px" style="border: none;"/></a>
             	<img src="img/Pentagram.gif" style="border: none;"/>
+            </p>
             	
         </div>
     </footer>
