--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
     <script type="text/JavaScript">
-        var logos = ['RFV_blue.png', 'RFV_red.png', 'RFV_yellow.png', 'RFV_green.png', 'RFV_grey.png'];
+        var logos = ['bd.png', 'bmhfd.png', 'bmhsd.png', 'byhfd.png', 'byhsd.png', 'gd.png', 'gmhfd.png', 'gmhsd.png', 'gyhfd.png', 'gyhsd.png', 'rd.png', 'rmhfd.png', 'rmhsd.png', 'ryhfd.png', 'ryhsd.png', 'md.png', 'mbhfd.png', 'mbhsd.png', 'mghfd.png', 'mghsd.png', 'mrhfd.png', 'mrhsd.png', 'myhfd.png', 'myhsd.png', 'yd.png', 'ybhfd.png', 'ybhsd.png', 'yghfd.png', 'yghsd.png', 'yrhfd.png', 'yrhsd.png', 'ymhfd.png', 'ymhsd.png'];
         var intro_backgrounds = ["1a.jpg", "1b.jpg", "1c.jpg", "1d.jpg", "1e.jpg"];
         var programming_backgrounds = ["2a.jpg", "2b.jpg", "2c.jpg"];
 
@@ -56,7 +56,7 @@
                     Menu <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <img id="RFV_logo" src="" width="128px">
+                    <img id="RFV_logo" src="" height="32px">
                 </a>
             </div>
 
@@ -136,7 +136,6 @@
                     </li>
                 </ul>
                 </p>
-                <img src="img/RFV_grey_line.png" width="256px">
     		</div>
     	</div>
     </section>
